<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_task"
        android:title="@string/home" />

    <item
        android:id="@+id/search"
        android:enabled="false"
        android:icon="@drawable/ic_task"
        android:title="@string/search"/>

    <item
        android:id="@+id/programs"
        android:enabled="false"
        android:icon="@drawable/ic_task"
        android:title="@string/programs" />

    <item
        android:id="@+id/messages"
        android:enabled="true"
        android:icon="@drawable/ic_task"
        android:title="@string/messages" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_task"
        android:title="@string/profile" />
</menu>