<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/main_home_fragment_drawer_layout">

    <item
        android:id="@+id/homeFragmentNavigation"
        android:icon="@drawable/ic_home"
        android:title="@string/home_fragment_label" />

    <item
        android:id="@+id/searchFragmentNavigation"
        android:icon="@drawable/ic_search"
        android:title="@string/search_fragment_label" />

    <item
        android:id="@+id/programsFragmentNavigation"
        android:icon="@drawable/ic_programs"
        android:title="@string/programs_fragment_label" />

    <item
        android:id="@+id/messagesFragmentNavigation"
        android:icon="@drawable/ic_messages"
        android:title="@string/messages_fragment_label" />

    <item
        android:id="@+id/profileFragmentNavigation"
        android:icon="@drawable/ic_account"
        android:title="@string/profile_fragment_label" />

</menu>